--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^3.2.0",
     "webpack-dev-server": "^3.10.1"
   }
 }
